code smells fixed